# binst-pilot

./: .env.example  .gitignore  DA-PROOF.md  MINISCRIPT.md  README.md  hardhat.config.ts  inscription.json  miniscript_revamp.md  package-lock.json  package.json  plan.md
contracts/: BINSTDeployer.sol  Institution.sol
contracts/process/: ProcessInstance.sol  ProcessTemplate.sol
ignition/modules/: BINSTPilot.ts
scripts/: bitcoin-awareness.ts  demo-flow.ts  finality-monitor.ts  inscribe-binst.ts  psbt-transfer.ts  taproot-vault.ts  test-protocol.ts  verify-args-instance.cjs  verify-args-template.cjs
taproot-reader/: BITCOIN-IDENTITY.md  Cargo.toml  DECODING.md  conceptual.md
taproot-reader/crates/binst-decoder/: Cargo.toml
taproot-reader/crates/binst-decoder/src/: diff.rs  entities.rs  jmt.rs  lib.rs  storage.rs  value.rs  vault.rs
taproot-reader/crates/binst-decoder/tests/: e2e_proof_to_binst.rs
taproot-reader/crates/binst-inscription/: Cargo.toml
taproot-reader/crates/binst-inscription/src/: envelope.rs  lib.rs  types.rs
taproot-reader/crates/citrea-decoder/: Cargo.toml
taproot-reader/crates/citrea-decoder/src/: lib.rs  parser.rs  proof.rs  types.rs
taproot-reader/crates/cli/: Cargo.toml
taproot-reader/crates/cli/src/: citrea_rpc.rs  main.rs
taproot-reader/schema/: README.md  binst-metaprotocol.json
taproot-reader/schema/examples/: institution.json  process_instance.json  process_template.json  state_digest.json  step_execution.json
test/: BINSTPilot.ts
