[package]
name = "binst-decoder"
version = "0.1.0"
edition = "2024"
description = "Map Citrea DA state diffs to BINST protocol entities (institutions, processes, steps)"

[dependencies]
citrea-decoder = { path = "../citrea-decoder" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
