[package]
name = "binst-inscription"
version = "0.1.0"
edition = "2024"
description = "Parse 'binst' metaprotocol Ordinals inscriptions from Bitcoin witness data"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
