[package]
name = "citrea-scanner"
version = "0.1.0"
edition = "2024"
description = "CLI tool to scan Bitcoin testnet4 for Citrea DA inscriptions"

[[bin]]
name = "citrea-scanner"
path = "src/main.rs"

[dependencies]
citrea-decoder = { path = "../citrea-decoder" }
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
